next page buttons are now in correct position on mobile, official instance moved to a new domain, added liberapay donation option

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -246,7 +246,7 @@ a:hover,
 }
 
 .next-page-button-wrapper {
-    margin-top: -50px;
+    margin-top: -40px;
     margin-bottom: 100px;
 }
 
@@ -470,5 +470,9 @@ a[title] {
     .next-page-button-wrapper {
         margin-left: 20px;
         max-width: 90%;
+    }
+
+    .next-page-button-wrapper {
+        margin-top: 30px;
     }
 }
